code/srp-server/deploy/srp-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: srp-server
  name: srp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: srp-server
  template:
    metadata:
      labels:
        app: srp-server
    spec:
      containers:
      - image: srp-server:latest
        imagePullPolicy: Never
        name: srp-server
