code/srp-server/deploy/srp-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: srp-server
  name: srp-server
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: srp-server
